replace css things

--- a/community/FreeBSD_Workshop/index.html
+++ b/community/FreeBSD_Workshop/index.html
@@ -9,7 +9,7 @@
 </style>
 <title>e-yuuki.org</title>
 </head>
-<body><div class="inner">
+<body><div class="tiny">
 <h1>FreeBSDワークショップ</h1>
 <hr>
 <ul><li><a href="./20180629.txt">第42回FreeBSDワークショップ</a></li>
