--- a/community/Open_Source_Conference/index.html
+++ b/community/Open_Source_Conference/index.html
@@ -9,7 +9,7 @@
 </style>
 <title>e-yuuki.org</title>
 </head>
-<body><div class="inner">
+<body><div class="tiny">
 <h1><a href="https://ospn.jp">オープンソースカンファレンス</a></h1>
 <hr>
 <dl>
