--- a/essay/pkgintro.html
+++ b/essay/pkgintro.html
@@ -10,8 +10,8 @@ code{line-height:1.4;} b.root:before{content: "# ";} b.user:before{content: "$ "
 </style>
 <title>e-yuuki.org</title>
 </head>
-<body><div class="inner">
-<div class="inner">
+<body><div class="tiny">
+<div class="tiny">
 <h1>GNU/LinuxとBSD Unixのパッケージ概観</h1>
 <p>Last Update: <time>2018-12-15</time></p>
 <hr>
