--- a/introduction/index.html
+++ b/introduction/index.html
@@ -3,16 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
-<style>
-@media print, screen and (min-width:640px){
-code{line-height:1.4;} b.root:before{content: "# ";} b.user:before{content: "$ ";}
-.inner{margin: auto auto; line-height:1.75; letter-spacing:0.05em;width:38em;text-align: justify; text-justify: inter-character; color: #333333;}
-pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; line-height:0; border:solid 1px; border-radius:1em; white-space:pre-wrap;}p{text-indent:1em;}}
-@media only screen and (max-width:640px){.inner{font-size:80%; margin:auto auto; line-height:1.75; letter-spacing:0.05em; width:25em; text-align:justify; text-justify: inter-character; color: #333333;} pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; line-height:0; border:solid 1px; border-radius:1em; white-space:pre-wrap;} code{font-size:70%; line-height:1.4;}}p{text-indent:1em;}
-</style>
+<link rel="stylesheet" type="text/css" href="/css/my.css">
 <title>e-yuuki.org</title>
 </head>
-<body><div class="inner">
+<body><div class="tiny">
 <h1>Unix入門</h1>
 <hr>
 <p>目的は（1）資料が分散されがちだがUnix系OS上で一般的に使用されるソフトウェアの使用方法を一箇所にまとめ更新していくこと、（2）大学の講義や研究室および企業の研修資料として使うに耐えうる品質の自由な入門文書を残すことにあります。</p>
