--- a/netbsd/update_pkgsrc.html
+++ b/netbsd/update_pkgsrc.html
@@ -3,16 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
-<style>
-@media print, screen and (min-width:640px){
-code{line-height:1.4;} b.root:before{content: "# ";} b.user:before{content: "$ ";}
-.inner{margin: auto auto; line-height:1.75; letter-spacing:0.05em;width:38em;text-align: justify; text-justify: inter-character; color: #333333;}
-pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; line-height:0; border:solid 1px; border-radius:1em; white-space:pre-wrap;}p{text-indent:1em;}}
-@media only screen and (max-width:640px){.inner{font-size:80%; margin:auto auto; line-height:1.75; letter-spacing:0.05em; width:25em; text-align:justify; text-justify: inter-character; color: #333333;} pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; line-height:0; border:solid 1px; border-radius:1em; white-space:pre-wrap;} code{font-size:70%; line-height:1.4;}}p{text-indent:1em;}
-</style>
+<link rel="stylesheet" type="text/css" href="/css/my.css">
 <title>e-yuuki.org</title>
 </head>
-<body><div class="inner">
+<body><div class="tiny">
 <h1>pkg_comp(8)による安全なpkgsrc(7)パッケージの更新</h1>
 <hr>
 <p>NetBSDではThird-partyソフトウェアのインストールに<code>pkgsrc(7)</code>を使います。しかし'このシステムを使うにあたっては、ソフトウェアをインストールするよりもむしろインストールされたソフトウェアをどう更新していくかが大きな問題となります。なぜなら、ひとつのパッケージには複数のパッケージが依存しているのが普通であり、ソフトウェアをインストールすればするほどビルドが複雑になるからです。ユーザからすれば使いたいソフトウェアに依存したパッケージについて意識を向ける機会はほとんどありません。</p>
