--- a/template.html
+++ b/template.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" type="text/css" href="/css/my.css">
 <title>e-yuuki.org</title>
 </head>
-<body><div class="inner">
+<body><div class="tiny">
 <h1>@Page Title@</h1>
 <hr>
 <!-- @Edit here@ -->
