--- a/netbsd/thinkpad.html
+++ b/netbsd/thinkpad.html
@@ -83,10 +83,10 @@ lo0: flags=8049&lt;UP,LOOPBACK,RUNNING,MULTICAST&gt; mtu 33624
 
 <p>増設可能な最大メモリサイズはCPUに依存します。僕が持っているX230iは<a href="https://ark.intel.com/content/www/jp/ja/ark/products/71465/intel-core-i3-3120m-processor-3m-cache-2-50-ghz.html">Core i3-3120M</a>でした。搭載可能なメモリは最大32GBまでです。</p>
 
-<p>買ったのはPanramの8GB2枚入り計16GBのモデルです。ツクモで7280円でした。初期不良が不安な方は1ヶ月間のパーツ交換保証（500円）をつけるといいでしょう。</p>
+<p>買ったのはPanramの8GB2枚入り計16GBのモデルW3N1600PS-L8Gです。ツクモで7280円でした。初期不良が不安な方は1ヶ月間のパーツ交換保証（500円）をつけるといいでしょう。</p>
 
-<img src="./images/thinkpad_001.png" alt="W3N1600PS-L8G Package">
-<img src="./images/thinkpad_002.png" alt="W3N1600PS-L8G Package back side">
+<img src="./images/thinkpad_001.jpg" alt="W3N1600PS-L8G Package">
+<img src="./images/thinkpad_002.jpg" alt="W3N1600PS-L8G Package back side">
 
 <p>交換したところ、うまく動いています。初期不良もありませんでした。</p>
 
