Update usage.html bit

--- a/introduction/intro.html
+++ b/introduction/intro.html
@@ -33,7 +33,7 @@ main(void)
         return 0;
 }</b></code></pre>
 
-<p>1行目は"#"から始まっているがコマンドライン上の操作ではなくC言語の典型的なHello Worldです。これはテキストファイルの中身を表しています。黒線の中身の意味は文脈に応じて判断してください。</p>
+<p>1行目は"#"から始まっていますが、コマンドライン上の操作ではなくC言語の典型的なHello Worldです。テキストファイルの中身を表しています。黒線の中身の意味は文脈に応じて判断してください。</p>
 
 <h2 id="man">オンラインマニュアル</h2>
 
