--- a/introduction/usage.html
+++ b/introduction/usage.html
@@ -29,7 +29,12 @@
 <h2 id="path">絶対パスと相対パス</h2>
 <p>Unixのシステムはよくツリー状の構造になっていると言われます。頂点のルートディレクトリから枝が伸びているわけです。</p>
 
-<p>頂点のルートディレクトリから見たディレクトリやファイルの所在を「絶対パス」と呼びます。現在のディレクトリを「カレントディレクトリ」と呼びますが、そのカレントディレクトリから見たディレクトリやファイルの所在を「相対パス」と呼びます。</p>
+<figure style="text-align:center;">
+<img src="./img/usage_001.png" alt="Example of unix directory hiearchy">
+<figcaption><b>図1-1: </b>Unixのディレクトリ構造の例です。スペースの都合上省略していますが、実際はもっとディレクトリやファイルが存在します。この図では一部のみ抜粋しています。</figcaption>
+</figure>
+
+<p>頂点のルートディレクトリから見たディレクトリやファイルの所在を「絶対パス」と呼びます。現在のディレクトリを「カレントディレクトリ」と呼びますが、そのカレントディレクトリから見たディレクトリやファイルの所在を「相対パス」と呼びます。たとえば図1-1を見てください。図中のファイル"myprog"の絶対パスは"/home/uki/src/myprog"です。一方"/home/uki"ディレクトリにいるユーザから見た"myprog"の相対パスは"src/myprog"または"./src/myprog"となります。ここで、"."（ドット）はカレントディレクトリをあらわします。</p>
 
 <h2 id="pwd">現在位置を確認する</h2>
 <h2 id="cd">ディレクトリを移動する</h2>
