WIP: about remote work

--- a/essay/remote_work.html
+++ b/essay/remote_work.html
@@ -11,23 +11,47 @@
 <hr>
 <p>以前から最大週2回の頻度で在宅勤務をしていたのですが、会社の規則が変わり在宅勤務の制限がなくなったことで自宅にこもりっきりで仕事をするワークスタイルになりました。通勤の往復約2時間強がなくなったことでとても生活しやすくなったのは確かですが、オフィスへ足を運んで仕事する人に比べて不利になる点もあります。</p>
 
-<p>リモートワークは一部の企業では普通の働き方かもしれませんが、フレックス制度すら形骸化している企業もある世の中です。いわんやリモートワークをや。この働き方はまだ一般的ではなく、導入する企業の中でもまだ実験的な段階でしょう。僕たち労働者にとっては、自身にとって都合のいい働き方ができるシステムを壊さないよう、慎重にそれを利用するしかありません。</p>
+<p>リモートワークは一部の企業では普通の働き方かもしれませんが、フレックス制度すら形骸化している企業もある世の中です。いわんやリモートワークをや。この働き方はまだ一般的ではなく、導入する企業の中でもまだ実験的な段階でしょう。僕たち労働者にとっては、自身にとって都合のいい働き方ができるシステムを壊さないよう、慎重に利用するしかありません。</p>
 
 <h2>オフィスワークへの不満</h2>
 <h3>通勤</h3>
 <p>朝9時をめがけて電車に乗ったときの混雑といったら一日でもっともつらい時間かもしれません。なぜあんな目に遭ってまでオフィスへ行かなければならないのでしょうか。他人と必要以上に密着しながら数十分を過ごすことで得られる精神的苦痛はどこへ訴えればいいのでしょうか。</p>
 
-<p>オフィスワークしつつ満員電車を回避するには、電車が混むピークの時間帯を避けて通勤するしかありません。僕の場合、オフィスへ行く必要がある日は最寄り駅の始発に乗って6時前にオフィスへ着くように通勤します。それでも座席は8〜9割ほど埋まっています。東京の朝は早く、夜は遅いのです。座れたときは本を読みますが、立たねばならずなにもしないで過ごす時間も少なくはありません。</p>
+<p>オフィスワークしつつ満員電車を回避するには、電車が混むピークの時間帯を避けて通勤するしかありません。僕の場合、オフィスへ行く必要がある日は最寄り駅の始発に乗って6時前にオフィスへ着くように通勤します。それでも座席は8〜9割ほど埋まっています。東京の朝は早く、夜は遅いのです。座れたときは本を読みますが、立たねばならずなにもしないで過ごす時間も少なくないです。</p>
 
 <h3>オフィス環境</h3>
-<p>オフィスワークに対する不満は通勤だけでしょうか？違います。ストレスの源はオフィスの中にも存在しているのです。たとえば従業員数に対して狭いトイレ・嫌でも聞こえてくる叱責の声・興味のないおしゃべり・ひとりごと・狭い座席・必要以上に大きいキーボードの打鍵音などです。人によっては、ひとつひとつは些細なことに思えるかもしれません。しかし、精神的な負担というものはそんな些細なことの積み重ねからくるものです。</p>
+<p>ストレスの源はオフィスの中にも存在しています。たとえば従業員数に対して狭いトイレ・嫌でも聞こえてくる叱責の声・興味のないおしゃべり・ひとりごと・狭い座席・必要以上に大きいキーボードの打鍵音などです。人によっては、ひとつひとつは些細なことに思えるかもしれません。しかし、精神的な負担というものはそんな些細なことの積み重ねからくるものです。</p>
 
-<p>机・椅子・蔵書・人間関係などが原因でオフィス環境が自宅よりもひどい作業環境になるとしたら、オフィスで働く意味はなんでしょうか。</p>
+<p>机・椅子・蔵書・人間関係などが原因でオフィス環境が自宅よりもひどい作業環境になるとしたら、オフィスで働く意味がほとんどなくなってしまいます。</p>
 
 <h2>在宅勤務に切り替えた</h2>
 <p>上のようなストレスの源を断つにはいっそオフィス以外の場所で働くのが手っ取り早い方法です。さいわい会社では週2回を限度に在宅勤務が認められていました。また、移転直後にも関わらずオフィスの収容人数がとっくに限界を迎えていたことから、会社上層部によって「座席フリーアドレス化」が推進されました。その取り組みの一環として週あたりの在宅勤務に制限がなくなりました。特に昨年（僕の世代）・今年の新入社員は収容人数の限界からくる問題に苦しまれていたので、喜ぶべき制度転換でした。</p>
 
+<h3>在宅勤務の一日</h3>
+
+<p>オフィスで働く日は、実際に仕事を始めるより2時間以上早い時刻に起床して、支度をしてから通勤します。一方在宅勤務であれば支度はともかく通勤する時間がまるごと消えます。片道1時間かかるのであれば1日で2時間余暇が増えるわけです。時間に余裕ができるというのはとても素晴らしいことで、僕の場合は在宅勤務を始めてからというものの目覚まし時計を使わなくなりました。電車の時間を気にしなくてもいいので起床時間に多少のブレがあってもいいのです。よって、朝起きたら支度をしてPCの電源をつけ、在席管理のWebアプリから「出勤」をクリックするだけで出勤完了です。</p>
+
+<p>VPNでオフィスのネットワークへ接続し、動かしっぱなしにしているデスクトップPCにSSHログインして開発業務を進めます。コミュニケーションはチャット（IRC・Slack）やメールで済ませ、会議にはビデオ通話（Google Meet）を通じて参加します。大きいファイルのやりとりやソフトウェアのビルドといった重たい作業はすべてリモートのマシンに任せることから、レンタルのノートPC（Core i5-7300U, RAM 8GB）でも性能面の問題は特にありません。</p>
+
+<p>終業時刻になったら、在席管理アプリから「退勤」をクリックし、VPNを切断するともうあとはプライベートな時間です。</p>
+
 <h2>みえてきた在宅勤務の難点</h2>
+<p>いいことばかりのように思えます。ただ、在宅勤務には在宅勤務の難点があります。</p>
+
+<h3>会話</h3>
+
+<p>まず直接人と会話ができません。誰かに伝えたいことはすべて文章として書き起こさなければいけません。「伝える内容が整理されていい」と感じるかもしれませんが、この制限によって雑談の回数は減ります。これは他者とのコラボレーションがうまくできない一因になります。また内容をうまく言語化できないときは書くだけでも時間がかかり、結局書かずに自分で溜め込んだまま意思疎通ができない場合もあります。これらの問題はいわゆる「チャット慣れ」しているような人にとっては関係がないかもしれませんが、いつでも誰かと直接会話できる労働環境に慣れている人からすれば大変なことです。</p>
+
+<p>声を使ったコミュニケーションは自然と電話やビデオ通話に限られます。対面での会話だけでは中々気が付かないのですが、意外と僕たちはその場の空気を読んで会話をしています。たとえば身ぶりや顔の表情などです。ビデオ通話では全身の身ぶりが分からず、顔の表情も中々つかめません。加えてわずかにラグも発生します。したがってビデオ通話を使った会議は、全員が同じ部屋に集まっておこなう会議よりも若干テンポが悪くなります。</p>
+
+<h3>ネットワーク</h3>
+<p>自宅のインターネット接続をオフィスと同じくらい高速にするのは難しいでしょう。僕の場合、自宅に光回線を引かずにSIMを挿すWiFiルータを契約しています。ネットワークは夕方ごろから遅くなり、日によってはSSHで開発マシンに繋げているとキーボード入力が1秒遅れるほど遅くなります。月の通信量は無制限となっていますが、3日で10GB以上の通信をすると低速モード（送受信最大200kbps）に切り替わってしまいます。リモートから手元の端末へと大きなファイルの送受信もできません。当然プライベートな時間で通信しすぎると業務に影響してしまいます。</p>
+
+<p>結局、僕は自宅へ光回線を引くことにしました。このようなインフラ周りはすべて自費で賄わなければいけません。</p>
+
+<h3>周辺機器</h3>
+<p>オフィスで使える周辺機器を自宅に持ち帰るわけにはいかないため自分でモニタなどを用意する必要があります。</p>
+
 <h2>オフィスワークの利点を振り返る</h2>
 <h2>いいとこ取りなんてない</h2>
 <hr>
