WIP: about remote work

--- a/essay/remote_work.html
+++ b/essay/remote_work.html
@@ -39,7 +39,6 @@
 <p>いいことばかりのように思えます。ただ、在宅勤務には在宅勤務の難点があります。</p>
 
 <h3>会話</h3>
-
 <p>まず直接人と会話ができません。誰かに伝えたいことはすべて文章として書き起こさなければいけません。「伝える内容が整理されていい」と感じるかもしれませんが、この制限によって雑談の回数は減ります。これは他者とのコラボレーションがうまくできない一因になります。また内容をうまく言語化できないときは書くだけでも時間がかかり、結局書かずに自分で溜め込んだまま意思疎通ができない場合もあります。これらの問題はいわゆる「チャット慣れ」しているような人にとっては関係がないかもしれませんが、いつでも誰かと直接会話できる労働環境に慣れている人からすれば大変なことです。</p>
 
 <p>声を使ったコミュニケーションは自然と電話やビデオ通話に限られます。対面での会話だけでは中々気が付かないのですが、意外と僕たちはその場の空気を読んで会話をしています。たとえば身ぶりや顔の表情などです。ビデオ通話では全身の身ぶりが分からず、顔の表情も中々つかめません。加えてわずかにラグも発生します。したがってビデオ通話を使った会議は、全員が同じ部屋に集まっておこなう会議よりも若干テンポが悪くなります。</p>
@@ -50,7 +49,16 @@
 <p>結局、僕は自宅へ光回線を引くことにしました。このようなインフラ周りはすべて自費で賄わなければいけません。</p>
 
 <h3>周辺機器</h3>
-<p>オフィスで使える周辺機器を自宅に持ち帰るわけにはいかないため自分でモニタなどを用意する必要があります。</p>
+<p>オフィスで使える周辺機器を自宅に持ち帰るわけにはいきません。自費でモニタなどを用意する必要があります。デスクトップPCならモニタは2枚以上使えますが、ノートPCとなるとせいぜい1枚です。モニタの面積はオフィスワークするほうが広いのです。</p>
+
+<p>僕は仕事のためにUSBハブを買いました。安い買い物でしたが、周辺機器も自費でなんとかしなければならない好例でもあります。ノートPCのUSBポートが足りなくなってしまい急遽用意する羽目になったのです。</p>
+
+<h3>勤務態度</h3>
+<p>監視されるのはまっぴらごめんですが、ある程度他者の目がないとだらけてしまいます。意味もなくメールボックスやチャットを覗いたり、スマホをいじってしまったりと家には誘惑が多いのです。さらに自宅にひとりきりだと、誰かと一緒に働いているという感覚が一切なくなってしまいます。通勤がないぶんダラダラと働けてしまうので、僕の会社では「在宅勤務のさいに残業しすぎないように」と注意喚起がなされました。オフィスワークと比べ残業しやすくなり、実際に残業時間が増加していたようです。</p>
+
+<p>メジャーな時間管理術を活用して、勤務時間にメリハリをつけるといいと分かってきました。僕は「ポモドーロテクニック」と呼ばれる、25分の作業と5分の休憩というインターバルを繰り返す時間管理術が気に入っています（この説明はかなりおおまかなので詳しくは調べてみてください）。タスク管理と時間計測をためにわざわざ専用のアプリまで買ってしまったほどです。</p>
+
+<p>繰り返しになりますが、自宅に潜む誘惑はオフィスと比べものにならないほど多く存在します。なんらかの工夫をこらす必要が出てきます。</p>
 
 <h2>オフィスワークの利点を振り返る</h2>
 <h2>いいとこ取りなんてない</h2>
