about remote work: finish writing

--- a/essay/remote_work.html
+++ b/essay/remote_work.html
@@ -53,14 +53,23 @@
 
 <p>僕は仕事のためにUSBハブを買いました。安い買い物でしたが、周辺機器も自費でなんとかしなければならない好例でもあります。ノートPCのUSBポートが足りなくなってしまい急遽用意する羽目になったのです。</p>
 
+<h3>椅子</h3>
+<p>通販サイトでオフィス用の椅子を眺めると、なんてことない地味な形状なのに何万、十何万円という価格がついていることに驚きます。いつもオフィスにいるときは椅子の質なんて気にしていませんでした。しかし自宅で8時間働いてみると椅子の質がどれだけ重要か嫌でも実感できます。自宅の椅子は「人間工学に基づいた」とうたう4万円ほどの椅子を奮発して選びましたが、それでもオフィスのものと比べると話になりません。</p>
+
 <h3>勤務態度</h3>
 <p>監視されるのはまっぴらごめんですが、ある程度他者の目がないとだらけてしまいます。意味もなくメールボックスやチャットを覗いたり、スマホをいじってしまったりと家には誘惑が多いのです。さらに自宅にひとりきりだと、誰かと一緒に働いているという感覚が一切なくなってしまいます。通勤がないぶんダラダラと働けてしまうので、僕の会社では「在宅勤務のさいに残業しすぎないように」と注意喚起がなされました。オフィスワークと比べ残業しやすくなり、実際に残業時間が増加していたようです。</p>
 
 <p>メジャーな時間管理術を活用して、勤務時間にメリハリをつけるといいと分かってきました。僕は「ポモドーロテクニック」と呼ばれる、25分の作業と5分の休憩というインターバルを繰り返す時間管理術が気に入っています（この説明はかなりおおまかなので詳しくは調べてみてください）。タスク管理と時間計測をためにわざわざ専用のアプリまで買ってしまったほどです。</p>
 
-<p>繰り返しになりますが、自宅に潜む誘惑はオフィスと比べものにならないほど多く存在します。なんらかの工夫をこらす必要が出てきます。</p>
+<p>繰り返しになりますが、自宅に潜む誘惑はオフィスと比べものにならないほど多く存在します。誘惑に打ち勝つためにはなんらかの工夫をこらす必要が出てきます。</p>
 
-<h2>オフィスワークの利点を振り返る</h2>
-<h2>いいとこ取りなんてない</h2>
+<h2>どこででも働けるけど……</h2>
+<p>こうしてみると、長時間の通勤をしてでもオフィスで働く利点が浮かんできたような気がします。プロジェクトの関係者といつでも対面で会話できますし、ネットワークは高速でモニタは大きく椅子の座り心地は快適です。</p>
+
+<p>仕事するための環境を会社がお金をかけてわざわざ用意しているのには理由があるということです。もちろん僕はオフィスワークをしたくないから（オフィスで働く利点よりも家で働く利点を重視したから）どっぷりと在宅勤務をしているわけですが、実際にやってみるとオフィスのありがたみが分かるな、という話です。</p>
+
+<p>冒頭で書いたとおり、週5日在宅勤務ができる制度になったのは今月からなので、まだリモートワーカとの付き合い方やリモートで働く際の知見がたまっていないのが現状です。しかし程度の差はあれどオフィスワークと比べて仕事の効率は落ちるのではないでしょうか。それでも精神的に楽なのは圧倒的に在宅勤務ですし、在宅勤務できる自由があるということを福利厚生の最大の目玉としてアピールしてもいいくらいです。</p>
+
+<p>この「在宅勤務ができる自由がある」点がおそらく一番重要だと思います。オフィスワークかリモートワークどちらか一方だけを選ぶ必要はないのです。家で働きたければ家で働いて、オフィスに行きたければ好きな時間に行けばいいのです。ただ、オフィス以外の場所で働くときに生じるギャップを社員全員が把握しておかなければいけないでしょう。</p>
 <hr>
 <footer><div style="text-align:center;padding-top:2em;padding-bottom:2em;"><a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/"><img src="https://i.creativecommons.org/p/zero/1.0/88x31.png" alt="CC0" /></a></div><p>To the extent possible under law, <a href="mailto:uki@e-yuuki.org">Yuuki Enomoto</a> has waived all copyright and related or neighboring rights to e-yuuki.org. This work is published from: Japan.</p></footer></div></body></html>
