--- a/index.html
+++ b/index.html
@@ -49,11 +49,12 @@
 </ul>
 <h3 id="essay">エッセイ</h3>
 <ul>
+<li><a href="./essay/remote_work.html">リモートワーカーになった</a></li>
+<li><a href="./essay/practice_tdd.html">初めてのテスト駆動開発（TDD）と感想</a></li>
 <li><a href="./essay/cc0code.html">CC0 HTMLコードを直す</a></li>
 <li><a href="./essay/work_life_barance.html">会社員とFLOSS趣味プログラマの両立について</a></li>
 <li><a href="./essay/pkgintro.html">GNU/LinuxとBSD Unixのパッケージ概観</a></li>
 <li><a href="./essay/webpage.html">動的Webページから静的Webページへの移行</a></li>
-<li><a href="./essay/practice_tdd.html">初めてのテスト駆動開発（TDD）と感想</a></li>
 </ul>
 
 <h2 id="papers">論文や発表資料</h2>
