--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </ul>
 <h3 id="coding">コーディング</h3>
 <ul>
-<li><a href="./coding/html.html">私家版HTML Coding Style</a></li>
+<li><a href="./coding/html.html">私家版HTML文書執筆ガイド</a></li>
 <li><a href="./coding/shellscript.html">私家版ShellScript Coding Style</a></li>
 </ul>
 <h3 id="essay">エッセイ</h3>
