--- a/netbsd/zfs.html
+++ b/netbsd/zfs.html
@@ -14,24 +14,26 @@
 
 <p>NetBSDではZFSがBase Systemにインストールされています。ここではUSB経由で外付けされたひとつのSSDをひとつのpoolとしてZFSを利用する手順を述べます。なお、NetBSD 8.1では古いZFSが使われており、新しいバージョンのZFSを使うにはNetBSD 8.99.37以降を使う必要があります[<a href="#clarestudio">clarestudio.org</a>][<a href="#wiki">wiki.netbsd.org</a>]。</p>
 
-<div align="center" style="padding: 1em;">
-<table>
+<div class="table-layout">
+<table style="width:100%;">
+<thead>
 <tr><th>パーツ名</th><th>メーカ</th><th>型番</th></tr>
+</thead>
+<tbody>
 <tr><td>HDD/SSDケース</td><td>AOTECH</td><td>AOK-25CASE-U3C</td></tr>
 <tr><td>SSD</td><td>crucial</td><td>CT250MX500SSD1/JP</td></tr>
+</tbody>
 </table>
 </div>
 <img src="./images/zfs_001.jpg" alt="Disk for ZFS">
-<nav>
-  <ol>
-    <li><a href="#kernel">NetBSDバージョンの確認</a></li>
-    <li><a href="#module">カーネルモジュールをロードする</a></li>
-    <li><a href="#pool">ZFS poolを作成する</a></li>
-    <li><a href="#filesystem">ZFSファイルシステムを作成する</a></li>
-    <li><a href="#mount">マウント・アンマウント</a></li>
-    <li><a href="#references">参考文献</a></li>
-  </ol>
-</nav>
+<nav><ol>
+<li><a href="#kernel">NetBSDバージョンの確認</a></li>
+<li><a href="#module">カーネルモジュールをロードする</a></li>
+<li><a href="#pool">ZFS poolを作成する</a></li>
+<li><a href="#filesystem">ZFSファイルシステムを作成する</a></li>
+<li><a href="#mount">マウント・アンマウント</a></li>
+<li><a href="#references">参考文献</a></li>
+</ol></nav>
 <h2 id="kernel">NetBSDバージョンの確認</h2>
 <h2 id="module">カーネルモジュールをロードする</h2>
 <h2 id="pool">ZFS poolを作成する</h2>
