Update HOW TO BE DEVELOPER

--- a/netbsd/how_to_be_developer.html
+++ b/netbsd/how_to_be_developer.html
@@ -10,43 +10,47 @@
 <h1>NetBSD/pkgsrc開発者になる方法</h1>
 <hr>
 <h2 id="intro">はじめに</h2>
-<p>2019年3月1日にNetBSD開発者となり、<a href="https://wiki.netbsd.org/projects/project/syspkgs/">syspkg</a>とInstallationの作業をすることになりました。大学院での研究成果について「いっそ開発者になってアップストリームをいじればいい」と言われてから半年以上が経ち、2019年1月からようやく腰を上げて開発者申請をしたという経緯がありました。</p>
+<p>2019年3月1日にNetBSD開発者となり、<a href="https://wiki.netbsd.org/projects/project/syspkgs/">syspkg</a>とInstallationの作業をすることになりました。大学院での研究成果について日本NetBSDユーザーズグループ（JNUG）のBoFで発表したところ「いっそ開発者になってアップストリームをいじればいい」と言われてから半年以上が経ち、2019年1月からようやく重い腰を上げて開発者申請をしたという経緯がありました。</p>
 
-<p>NetBSD自体がマイナーなOSであり、その開発者になるにはどうしたらいいかという文書は日本語で書かれている印象がないのでここに残しておきます。また<code>pkgsrc(7)</code>のCVS repositoryに直接commitするにも開発者申請が必要ですが、ここではその話はしません。</p>
+<p>NetBSD自体がマイナーなOSであり、その開発者になるにはどうしたらいいかという文書は日本語で書かれている印象がありません。そこでこの文章を書いておくことにしました。<code>pkgsrc(7)</code>のCVS repositoryに直接commitするにも同じくNetBSDの開発者申請が必要ですがここではその話はしません。しかし手順そのものは同じですのでぜひ参考にしていただければと思います。</p>
 
 <h2>NetBSDを使う</h2>
-<p>まずはNetBSDを使わないと話が始まりません。用途・動機はなんでもいいと思います。<code>pkgsrc(7)</code>であればGNU/Linux distributions・FreeBSD・OpenBSD上で利用できることから、OSをインストールして使うより敷居が高くはないと思われます。</p>
+<p>まずはNetBSDを使わないと話が始まりません。用途・動機はなんでもいいと思います。<code>pkgsrc(7)</code>であればGNU/Linux distributions・FreeBSD・OpenBSD上で利用できるので、OSをインストールして使うより敷居は高くありません。なにかしらのFLOSS開発者なら、FLOSSを配布する手段のひとつとして<code>pkgsrc(7)</code>を選んでもいいでしょう。</p>
+
+<p>ここでNetBSDを「使う」と書いたのは言葉の解釈を広げるためです。PCや仮想マシンにインストールすること、ソースコードをダウンロードして読んでみること、なにかしらのUnix環境でソースツリーをビルドしてみること……などのように様々なケースを考えられます。</p>
 
 <h3>僕の場合</h3>
 <p>大学3年生冬の研究室配属ののち、研修で触ったのがNetBSDでした。卒業論文のために書いたプログラムはNetBSDに完全に依存していて、修士論文もまた同様でした。これは自発的に（無論、研究テーマを決めたのは自分自身）NetBSDを使い始めたというわけではなく、なりゆきでそうなったと言うのが正しいと思います。</p>
 
 <h2>できそうなことを見つける</h2>
-<p>NetBSD/<code>pkgsrc(7)</code>を使っていく中で、少なからず不便に思った点や困った点が見つかると思います。その問題を自分で解決したいと思ったときにはじめてThe NetBSD Projectへ参加する動機が見つかります。</p>
-
-<h3>僕の場合</h3>
-<p>修士論文で書いたプログラムがNetBSDのソースツリーの一部に依存しており、事実そこだけforkしている形になっていました。しかしforkingの弊害、つまりアップストリームの変更に追従していくのが大変という問題に気づきました。</p>
+<p>NetBSD/<code>pkgsrc(7)</code>を使っていく中で、少なからず不便に思った点や困った点が見つかるときがきます。それはカーネルやユーザランドプログラムの不具合に遭遇してしまったときかもしれませんし、求めているデバイスドライバが存在しないときかもしれませんし、ドキュメントが古くて調べものに時間がかかってしまったときかもしれません。そのとき、その問題を自分で解決したいと思ったのであれば、それはThe NetBSD Projectへ参加する動機になるでしょう。</p>
 
 <h3>Project proposals for NetBSD</h3>
-<p>NetBSD Wikiの<a href="https://wiki.netbsd.org/projects/">Project proposals for NetBSD</a>には未解決・進行中のプロジェクトの一覧が載っています。もしあなたが問題解決好きなエンジニアであればこの中から自身のスキルと嗜好に合ったものを探してみるといいでしょう。</p>
+<p>NetBSD Wikiの<a href="https://wiki.netbsd.org/projects/">Project proposals for NetBSD</a>には未解決・進行中のプロジェクトの一覧が載っています。もしあなたが問題解決好きなエンジニアであればこの中から自身のスキルと嗜好に合ったものを探してみるといいでしょう。しかし中には古い情報が含まれている可能性もあります。興味のあるプロジェクトを見つけたら、<a href="https://www.netbsd.org/mailinglists/">メーリングリスト</a>に興味がある旨を投稿するのが一番です。</p>
 
 <h3>Google Summer of Code</h3>
-<p>NetBSDのプロジェクトの中にはGoogle Summer of Codeに応募して取り組められるものもあります。GSoCに参加したくてかつNetBSDに少しでも興味があるのであれば、良いとっかかりになるのではないでしょうか。<a href="https://wiki.netbsd.org/projects/gsoc/">https://wiki.netbsd.org/projects/gsoc/</a></p>
+<p>NetBSDのプロジェクトの中にはGoogle Summer of Codeに応募して取り組められるものもあります。GSoCに参加したくてかつNetBSDに少しでも興味があるのであれば、良いとっかかりになるのではないでしょうか。<a href="https://wiki.netbsd.org/projects/gsoc/">https://wiki.netbsd.org/projects/gsoc/</a>を参照してください。</p>
+
+<h3>僕の場合</h3>
+<p>修士論文で書いたプログラムがNetBSDのソースツリーの一部に依存しており、事実そこだけforkしている形になっていました。しかしforkingの弊害、つまりアップストリームの変更に追従していくのが大変という問題に気づきました。当時はアップストリームのコードとの差分をpatchとして保持しておくという考えに至らず、上流のコードが更新されたらforkしたコードの修正をまたゼロからやり直すという作業をしていたのです。図らずとも、この無知が直接上流のコードをいじってしまいたいというモチベーションを高める要因になっていました。</p>
 
 <h2>できそうなことをある程度こなす</h2>
-<p>やりたいこと・やってみたいことが見つかったら、それを実際にやってみます。そしてその成果をなんらかの形で共有します。共有する方法はなんでもいいです。SNSでシェアしてもいいですし、FLOSS系のイベントやカンファレンスで少し時間をもらって発表してもいいです。とにかく、なんらかのやりたいことがあって、それを現実に実行していると他の開発者に伝えることが重要です。</p>
+<p>やりたいこと・やってみたいことが見つかったら、それを実際にやってみます。そしてその成果をなんらかの形で共有します。共有する方法はなんでもいいです。SNSでシェアしてもいいですし、FLOSS系のイベントやカンファレンスで少し時間をもらって発表してもいいです。とにかく、なんらかのやりたいことがあって、それを現実に実行していると他の開発者に伝えることが重要です。おそらくもっとも理解が深い人からの反響を得られるのは<a href="https://www.netbsd.org/mailinglists/">メーリングリスト</a>に成果や途中経過について投稿してみることでしょう。</p>
+
+<p>また<code>send-pr(1)</code>あるいは<a href="https://www.netbsd.org/support/send-pr.html">NetBSD Problem Reports</a>を通じて不具合の報告やパッチの投稿ができます。プロジェクト公式のフォームからなにかしらの貢献をするとそれが実績として認められ、開発者申請のアピールポイントにもなるようです。ぜひ活用してみてください。</p>
 
 <h3>僕の場合</h3>
 <p>成果をAsiaBSDConや日本NetBSDユーザーズグループのBoFで発表しました。成果物があまりにも特定分野に偏りすぎているがために特定のユーザコミュニティ内で成果発表をしないとあまり意味がない場合もあります。GNU/LinuxやLinuxカーネルならまだしも、*BSDはまさにこの典型です。</p>
 
 <h2>スポンサーを探す</h2>
-<p>最難関の手順です。まずこの時点で誰がNetBSDの開発者なのかを把握していないといけません。そのためにはSNSだけでなく対面して会える現実世界でのカンファレンスやイベントに出向く必要もあるでしょう。スポンサーになってくれるかを開発者に尋ねて、OKをもらってください。</p>
+<p>最難関の手順です。まずこの時点で誰がNetBSDの開発者なのかを把握していないといけません。そのためにはSNSだけでなく対面して会える現実世界でのカンファレンスやイベントに出向く必要もあります。スポンサーになってくれるかを開発者に尋ねて、OKをもらってください。</p>
 
 <p>ここから<a href="https://www.netbsd.org/foundation/policies/application-procedure.html">New NetBSD developer application procedure</a>の流れに沿って動くことになります。この時点ではまだ"Existing members decide to sponsor a potential member."の途中です。</p>
 
-<p>この時点でスポンサーにPGP公開鍵へ署名してもらうといいでしょう。</p>
+<p>後々の事務手続きに必要になるので、この時点でスポンサーにPGP公開鍵へ署名してもらうといいでしょう。NetBSDでは現実世界で直接会い、パスポートや社員証といった顔写真付きの公的な身分証明書を確認してはじめて公開鍵に署名するというやりとりをします。Debian GNU/Linuxのチームがこれと同じような厳格さで署名をするようです（『<a href="https://www.debian.org/events/keysigning.ja.html">Debian -- 鍵署名 (Keysigning)</a>』）。NetBSDのPGP公開鍵について詳しくは『<a href="http://www.jp.netbsd.org/ja/developers/pgp.html">NetBSD開発者のためのPGP鍵管理ガイド</a>』を参照してください。</p>
 
 <h2>開発者申請する</h2>
-<p>スポンサーを最低1人、できれば2人集めたら開発者申請をします。スポンサーと相談しながら<a href="https://www.netbsd.org/foundation/policies/membership-app.txt">NetBSD Foundation Membership Application Form</a>に必要事項を記入してください。以下を記入する必要があります。</p>
+<p>スポンサーを1人以上集めたら、いよいよ開発者申請をします。スポンサーと相談しながら<a href="https://www.netbsd.org/foundation/policies/membership-app.txt">NetBSD Foundation Membership Application Form</a>に必要事項を記入してください。以下を記入する必要があります。</p>
 
 <ul>
 <li>氏名</li>
@@ -58,15 +62,22 @@
 <li>スポンサーのメールアドレス</li>
 </ul>
 
-<p>スポンサーと相談してすべて書き終えたら、NetBSDのMembership committeeにMembership Application Formをメールで送ります。テキストを本文に書いてしまうといいでしょう。</p>
+<p>スポンサーと相談してすべて書き終えたら、NetBSDのMembership committeeにMembership Application Formをメールで送ります。テキストを本文に書いてしまうといいでしょう。審査はMembership committeeによるものと既存の開発者らによるものがありますが、特に反対意見が出ない限りは審査は通るようです。が、日頃からなにかしらの成果や実績を残しておくに越したことはありません。</p>
 
 <h2>事務手続きをする</h2>
-<p>Membership committeeと開発者らによる審査が通ったら事務手続きをして完了です。この事務手続きはmembership agreement formに署名をしてThe NetBSD Foundationに郵送（あるいはFAX）し、PGPの公開鍵で署名された/etc/passwdのエントリとSSH公開鍵のテキストを所定のアドレスへ送る必要があります。ここで、署名するためのPGP公開鍵は既存のメンバーによって署名されたものでなければなりません。</p>
+<p>Membership committeeと開発者らによる審査が通ったら事務手続きをして完了です。この事務手続きはmembership agreement formに署名をしてThe NetBSD Foundationに郵送（あるいはFAX）し、PGPの公開鍵で署名された/etc/passwdのエントリとSSH公開鍵のテキストを所定のメールアドレスへ送る必要があります。ここで、署名するためのPGP公開鍵は既存のメンバーによって署名されたものでなければなりません。</p>
+
+<p>郵送は国際郵便、FAXは国際FAXです。日本から送るのであればFAXが便利です。ファミリーマートのマルチコピー機では国際FAXが使えます。僕がFAXを送ったとき、いやに手続きに時間がかかるなと思いメールで問い合わせてみたところ向こうからは「FAXはまだ来ていないよ」と返ってきました。後日、このトラブルは受け取り側のFAX機が動いていなかったことが原因で起きたものだと発覚しました。このようなトラブルを避けるために、FAXを送ったら「送りましたよ」と一言メールで連絡しておくといいでしょう。</p>
 
 <h2>完了！</h2>
-<p>これでNetBSDの開発者申請は完了し、めでたくNetBSD開発者の一員となれました。スポンサーとのやりとり以外はすべて英語なので厳しい人には厳しいかもしれませんが、英語でのやりとりは多くのFLOSSプロジェクトで必須でしょうからこれに限った話ではありません。</p>
+<p>事務手続きが終われば、ソースコードへのアクセス方法やメール・チャットの基本的な使い方が書かれた電子メールが送られてきます。これでNetBSDの開発者申請は完了し、めでたくNetBSD開発者の一員となれました。スポンサーとのやりとり以外はすべて英語なので厳しい人には厳しいかもしれませんが、英語でのやりとりは多くのFLOSSプロジェクトで必須でしょうからこれに限った話ではありません。</p>
 
 <p>FLOSSはライセンスを守っていればアップストリームから好きにコードをもってきて自分の思うように書き直せますが、一番効率が良いのは自分自身でアップストリームのコードをいじり・保守していくことだと思います。可能であれば積極的にコミュニティやプロジェクトに自分の成果を還元していくことはFLOSSの共有の精神に則った素晴らしい行為でもありますし、積極的に挑戦していくべきでしょう。</p>
+
+<h2>追記 2019/08/06</h2>
+<p>この文章の初稿は、開発者申請が通った2019年3月にその勢いのまま書いたものでした。その約半年後、2019年8月に開催されたOSC京都2019のNetBSDセミナーにて蛯原純さんに紹介されました。このとき初めて他の人がこの文章を読んでいると知って驚いたのです。いざ自分で読み直してみると妙に文があっさりというか簡潔に過ぎるという感覚を拭えませんでした。そのため少し加筆・修正を加えています。</p>
+
+<p>本稿にインスパイアされた『<a href="http://w.vmeta.jp/tdiary/20190806.html#p01">FreeBSD developer (ports) になる方法</a>』という記事もあるようです。ぜひご一読ください。</p>
 
 <hr>
 <footer>
